Tue Nov 01 22:41:04 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplicationManager/Containers_Info_Map.cpp: Changed to
	  insert policy set name into ContainerPolicySet property instead
	  of the actual policy since we already have the policy set
	  definitions when creating the NodeApplication.

Tue Nov 01 13:44:58 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/RTConfig_Manager.cpp:
	* DAnCE/NodeApplication/RTConfig_Manager.h:
	* DAnCE/NodeApplication/RTConfig_Manager.inl:
	* DAnCE/NodeApplication/RTNodeApp_Configurator.cpp:
	* DAnCE/NodeApplication/RTNodeApp_Configurator.h: Integrated
	  RTConfig_Manager with the RTNodeApp_Configurator.  

Mon Oct 31 22:37:42 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/NodeApplication/NodeApplication.mpc:
	* DAnCE/NodeApplication/NodeApplication/RTConfig_Manager.cpp:
	* DAnCE/NodeApplication/NodeApplication/RTConfig_Manager.h:
	* DAnCE/NodeApplication/NodeApplication/RTConfig_Manager.inl:
	  Added the RT configuration manager that keep track of all the RT
	  resources and policy sets in a NodeApplication.  We still need
	  to hook this up in the RTNodeApp_Configurator.

Mon Oct 31 11:22:41 2005    <Gan Deng@SKYLINENETGEAR>

	* examples/Hello/descriptors/rt-config-example.csr
	* DAnCE/NodeApplicationManager/Containers_Info_Map.cpp
	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp

	  Fixed the descriptor by adding the server resource id tag.

Sun Oct 30 22:49:52 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeManager/Node_Manager.cpp: Fixed missing -a Get_Opt
	  parameter and usage text.  "-a" is used to set the optional
	  command line flags for the NodeApplication.  The logic was there
	  in the Get_Opt loop but the Get_Opt object was not set to parse
	  the flag and the usage text for Node_Manager didn't mention the
	  flag either.  

	  Eventually, the optional command line flags should really come